osd/PrimaryLogPG: add munged param to finish_extent_cmp

The missing parameter was due to a conflict between the upstream
http://tracker.ceph.com/issues/21629 bugfix, and the SES downstream
logic to handle old cmpext client requests using the previous format.

Signed-off-by: David Disseldorp <ddiss@suse.de>
(cherry picked from commit 90d85b345bf4697f91aa106849a468e9de6aa881)